--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,43 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
-      
-    <div class="container">
-      <div class="form-group">
-        <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
-        <small id="helpId" class="text-muted">Enter your website url here.</small>
-      </div>
-      <input name="" id="" class="btn btn-primary" type="button" value="Submit">
-    </div>  
+    <section class="url-input" style="padding: 20px 0px;">
+      <div class="container">
+        <div class="form-group">
+          <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
+          <small id="helpId" class="text-muted">Enter your website url here.</small>
+        </div>
+        <input name="" id="" class="btn btn-primary" type="button" value="Submit">
+      </div>    
+    </section>  
 
+    <section class="crawl-data">
+      <div class="container">
+        <div class="table-responsive-sm">
+        <table class="table table-striped table-dark table-sm">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              {% for col in data.columns %}
+                <th scope="col">{{col}}</th>
+              {% endfor %}
+            </tr>
+          </thead>
+          <tbody>
+            {% for index,row in data.iterrows() %}
+              <tr>
+                <th scope="row">{{index}}</th>
+                {% for column in row %}
+                <td>{{column}}</td>
+                {% endfor %}
+            {% endfor %}
+        </table>  
+
+        </div>
+      </div>
+    </section>
+
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
