--- a/templates/index.html
+++ b/templates/index.html
@@ -1,56 +1,73 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <title>VN Express Crawler</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
-  <body>
-    <section class="url-input" style="padding: 20px 0px;">
-      <div class="container">
-        <div class="form-group">
-          <input type="text" name="" id="" class="form-control" placeholder="" aria-describedby="helpId">
-          <small id="helpId" class="text-muted">Enter your website url here.</small>
-        </div>
-        <input name="" id="" class="btn btn-primary" type="button" value="Submit">
-      </div>    
-    </section>  
+<head>
+  <title>VN Express Crawler</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+</head>
+
+<body>
+  <section class="url-input" style="padding: 20px 0px;">
+    <div class="container">
+      <form method="POST" action="/">
+          {{ form.hidden_tag() }}
+        {{ form.csrf_token }}
+        {{ form.url.label }} {{ form.url }}
+        
+        <input type="submit" value="Search">
+      </form>
+    </div>
+  </section>
+
+  {% if data is defined %}
     <section class="crawl-data">
-      <div class="container">
-        <div class="table-responsive-sm">
+    <div class="container">
+      <div class="table-responsive-sm">
         <table class="table table-striped table-dark table-sm">
           <thead>
             <tr>
               <th scope="col">#</th>
               {% for col in data.columns %}
-                <th scope="col">{{col}}</th>
+              <th scope="col">{{col}}</th>
               {% endfor %}
             </tr>
           </thead>
           <tbody>
             {% for index,row in data.iterrows() %}
-              <tr>
-                <th scope="row">{{index}}</th>
-                {% for column in row %}
-                <td>{{column}}</td>
-                {% endfor %}
-            {% endfor %}
-        </table>  
+            <tr>
+              <th scope="row">{{index}}</th>
+              <td>{{row['product_id']}}</td>
+              <td>{{row['seller_id']}}</td>
+              <td>{{row['title']}}</td>
+              <td>{{row['price']}}</td>
+              <td> <img src="{{row['image_url']}}" class="img-fluid" width=100 height=100 alt=""></td>
+              {% endfor %}
+        </table>
 
-        </div>
       </div>
-    </section>
+    </div>
+  </section>
+  {% endif %}
 
-    
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
