--- a/templates/index.html
+++ b/templates/index.html
@@ -1,46 +1,66 @@
 {% extends 'base.html' %}
 {% block content %}
-  <section class="url-input" style="padding: 20px 0px;">
-    <div class="container">
-      <form method="POST" action="/">
-          {{ form.hidden_tag() }}
-        {{ form.csrf_token }}
-        {{ form.url }}
-        <input type="submit" value="Search">
-      </form>
-    </div>
-  </section>
+<section class="url-input" style="padding: 20px 0px;">
+  <div class="container">
+    <form method="POST" action="/">
+      {{ form.hidden_tag() }}
+      {{ form.csrf_token }}
+      {{ form.url }}
+      <input type="submit" value="Search">
+    </form>
+  </div>
+</section>
 
-  {% if data is defined %}
-    <section class="crawl-data">
-    <div class="container">
-      <div class="table-responsive-sm">
-        <table class="table table-striped table-dark table-sm">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              {% for col in data.columns %}
-              <th scope="col">{{col}}</th>
-              {% endfor %}
-            </tr>
-          </thead>
-          <tbody>
-            {% for index,row in data.iterrows() %}
-            <tr>
-              <th scope="row">{{index}}</th>
-              <td>{{row['product_id']}}</td>
-              <td>{{row['seller_id']}}</td>
-              <td>{{row['title']}}</td>
-              <td>{{row['price']}}</td>
-              <td> <img src="{{row['image_url']}}" class="img-fluid" width=100 height=100 alt=""></td>
-              {% endfor %}
-        </table>
+{% if data is defined %}
+<section class="crawl-data">
+  <div class="container">
+    {% if pages is defined %}
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-end">
+      {% for page in pages %}
+        {% if page['active'] == 'enable' %}
+          <li class="page-item active">
+            <a class="page-link" href="{{ url_for('load_new_page',url=page['link'])}}">{{page['idx'] }}<span class="sr-only">(current)</span></a>
+          </li>
+        {% else %}
+          <li class="page-item">
+            <form action="{{ url_for('load_new_page')}}" method="POST">
+                {{ form.hidden_tag() }}
+                {{ form.csrf_token }}
+              <input class="page-link" type="submit" value="{{page['idx']}}">
+            </form>
+          </li>
+        {% endif %}
+      {% endfor %}
+      </ul>
+    </nav>
 
-      </div>
+    {% endif %}
+
+    <div class="table-responsive-sm">
+      <table class="table table-sm">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            {% for col in data.columns %}
+            <th scope="col">{{col}}</th>
+            {% endfor %}
+          </tr>
+        </thead>
+        <tbody>
+          {% for index,row in data.iterrows() %}
+          <tr>
+            <th scope="row">{{index}}</th>
+            <td>{{row['product_id']}}</td>
+            <td>{{row['seller_id']}}</td>
+            <td>{{row['title']}}</td>
+            <td>{{row['price']}}</td>
+            <td> <img src="{{row['image_url']}}" class="img-fluid" width=100 height=100 alt=""></td>
+            {% endfor %}
+      </table>
+
     </div>
-  </section>
-  {% endif %}
+  </div>
+</section>
+{% endif %}
 {% endblock %}
-
-
-
