Refator home page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,22 @@
 footer {
-  height: 80px;
+    height: 80px;
+}
+
+body {
+    height: 80%;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    height: 100%;
+}
+
+.fakeimg {
+    height: 200px;
+    background: #aaa;
+}
+
+.crawl-data {
+    margin-bottom: 120px;
 }
